# adventofcode2025

./: Cargo.toml  README.md
src/a1/: run.rs
src/a2/: run.rs
src/a3/: run.rs
src/a4/: run.rs
src/a5/: run.rs
src/a6/: run.rs
src/a7/: run.rs
